--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    //"outDir": "./out-tsc/app",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
