--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/animations": "~9.1.0",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "~9.1.0",
-    "@angular/compiler": "^9.1.1",
+    "@angular/compiler": "^9.1.2",
     "@angular/compiler-cli": "~9.1.0",
-    "@angular/core": "^9.1.1",
+    "@angular/core": "^9.1.2",
     "@angular/forms": "~9.1.0",
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~9.1.0",
@@ -41,14 +41,14 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular-devkit/build-angular": "^0.901.1",
     "@angular/cli": "^9.1.1",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
